frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Cambio del front a V4"
  name: frontend-symfony-prod
  namespace: prod
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: frontend-symfony
        image: dbastidas/symfony-k8s-front:v4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-symfony-prod
  namespace: prod
  labels:
    app: front
spec:
  type: NodePort
  selector:
    app: front
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
